# ocamlorg-docs-gadts

./: README.md
boolean_language/: bool_lang_phantom.ml  bool_lang_variants_1.ml  bool_lang_variants_2.ml  dune  gadt_bool_lang_1_short_syntax.ml  gadt_bool_lang_2_long_syntax.ml
printf_example/: printf_example.ml
